--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".SplashActivity" android:theme="@style/IntroTheme">
+        <activity android:name=".SetalarmActivity">
+        </activity>
+        <activity android:name=".SelectActivity">
+        </activity>
+        <activity
+                android:name=".SplashActivity"
+                android:theme="@style/IntroTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
